--- a/css/cmv_mobile.css
+++ b/css/cmv_mobile.css
@@ -1,23 +1,23 @@
-@charset "UTF-8";
-
-/*@import url(cmv_default.css);*/
-@import url(custom.css);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext);
 
-/* body{background:#f7f7f7;margin:0;padding:0;}убрать */
-
 .cmv_main{
-	position:relative;
-	width:750px;min-height:228px;
+	/*display:none;*/
+	width:100%; 
+	position:fixed; 
+	bottom:0px;
+	top:auto;
+	right:0;
+	z-index:9999999;
 	background:rgba(255,255,255,.95);
 	margin:0;
+	padding:50px 0 30px 0;
 	font-family:'Open Sans',sans-serif;
+	font-size:12px;
+	line-height:21px;
 	font-weight:300;
 	color:#000;text-align:center;
-	-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;
+	border-top:1px solid #BFBFBF;
 	-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
-	box-shadow: 0 0 1px #000;/* убрать */
-	margin:50px auto;/* убрать */
 }
 .cmv_main a{text-decoration:none;}
 .cmv_main a:hover{color:#fff;text-decoration:none;}
@@ -32,244 +32,232 @@
 	position:absolute;top:12px;left:5px;
 	width:28px;height:28px;
 	background:#d6d6d6;
-	color:#fff;font-size:18px;
-	line-height:22px;font-weight:600;
+	color:#fff;font-size:1.4em;
+	line-height:1.4em;font-weight:600;
 	border:3px solid #fff;
 	-webkit-border-radius: 100%;-moz-border-radius: 100%;border-radius: 100%;
 	-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;
 	-webkit-transition: all .3s ease;-moz-transition: all .3s ease;-ms-transition: all .3s ease;-o-transition: all .3s ease;transition: all .3s ease;
 }
 .cmv_main__cpr {
-	position:absolute;bottom:11px;right:13px;
+	position:absolute;
+	bottom:7px;right:11px;
 	display:inline-block;
 	font-weight:bold;
-	font-size:12px;
+	font-size:1em;
 }
-.cmv_textmid {display:inline-block;vertical-align:middle;}
-.cmv_heightfix {
-	display:inline-block;
-	vertical-align:middle;
-	min-height:288px;
-}
-.cmv_input__time,
-.cmv_input__time_box {
-	position:relative;
-	display:inline-block;
-	vertical-align:middle;
-}
-.cmv_input__time span {
-	display:inline-block;vertical-align:top;
-	margin:0 8px;
-	font-size:18px;line-height:49px;
-}
-
-/* with logo
-
-*/
-.cmv_main.cmv_withlogo .cmv_heightfix{
-	min-height:408px;
-}
-.cmv_main.cmv_withlogo .cmv_textmid:before{
-	content:'';
+.cmv_textmid {
 	display:block;
-	max-width:200px;
-	height:80px;
-	margin:-25px auto 25px;
-	background:url('../img/chevrolet.png') no-repeat center center;
-	background-size:contain;
+	width:90%;
+	margin:10px auto;
 }
-
-/* selectbox */
-.cmv_input__time_box{margin-right:8px;}
-.cmv_input__time_box .jq-selectbox__select{
-	position:relative;z-index:100;
-	width:123px;height:51px;
-	background:#fff;		
-	padding:0 0 0 9px;
-	font-family:'Open Sans',sans-serif;
-	color:#000;font-size:18px;
-	cursor:pointer;text-align:left;
-	line-height:50px;
-	border:1px solid #dcd6d9;
-	box-shadow:inset 0 3px 0 rgba(0,0,0,.06);
-	-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;
-	-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
-}
-.cmv_input__time_box .jq-selectbox__select-text{
-	display: block;
-	width: 100%;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-.cmv_input__time_box .jq-selectbox__dropdown {
-	width:121px;
-	background:#fff;
-	border:1px solid #e1e1e1;
-	border-top:0;
-}
-.cmv_input__time_box .jq-selectbox__dropdown  ul{
-	margin:0;
-	padding:0;
-}
-.cmv_input__time_box .jq-selectbox__dropdown li{
-	height:30px;
-	padding:0 0 0 9px;
-	font-family:'Open Sans',sans-serif;
-	color:#000;font-size:18px;
-	text-align:left;line-height:30px;
-	cursor:pointer;
-}
-.cmv_input__time_box .jq-selectbox__dropdown li.selected,
-.cmv_input__time_box .jq-selectbox__dropdown li:hover{background:#fafafa;}
-
-.cmv_input__time_box .jq-selectbox__trigger{
-	position:absolute;top:0;right:5px;
-	width:23px;height:51px;
-	background:url(../img/cmv_input__time_arrs.png) no-repeat 50% 50%;
-}
-.cmv_input__time_box .jq-selectbox__trigger-arrow{
-	margin:18px 0 0 9px;
-	width:12px;height:19px;		
-}
-.cmv_textmid__rate_txt,
-.cmv_textmid__rate_strs {display:inline-block;vertical-align:top;font-size:18px;}
-.cmv_textmid__rate_txt{margin-right:21px;}
-
-.cmv_manager__icon,
-.cmv_manager__info {
-	display:inline-block;
-	vertical-align:top;
-	text-align:left;
-}
-.cmv_manager__before{font-size:24px;}
-.cmv_manager__position{font-size:18px;margin: 23px 0 12px;}
-.cmv_manager__name{font-size:18px;font-weight:600;margin-bottom:12px;}
-.cmv_manager__after{font-size:14px;}
-.cmv_manager__icon{position: relative;top: -5px;left: -15px;}
+.cmv_title{font-size:1.4em;}
 
 /* BUTTONS
 
 */
-.cmv_buttons__confirm{
-	margin-top:35px;
-}
-.cmv_buttons__connect{
-	margin-top: 32px;
-	margin-bottom:15px;
-}
-.cmv_buttons__complaint a{
-	font-size:18px;
-	width:252px;
-}
-.cmv_buttons__connect .cmv_button{
-	margin-left: 8px;
-}
+.cmv_buttons__connect{margin-top: 10px;margin-bottom:15px;}
 .cmv_button{
-	display:inline-block;
+	display:block;
+	margin-top: 10px;
+	margin-left: 0;
 	vertical-align:top;
-	height:52px;
-	color:#fff;font-size:24px;
-	line-height:50px;text-align:center;
+	height:2.4em;
+	color:#fff;font-size:1.4em;
+	line-height:2.4em;text-align:center;
 	-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;
 	box-shadow:inset 0 -2px 0 rgba(0,0,0,.20), 0 2px 6px rgba(0,0,0,.20);
 	-webkit-transition: all .3s ease;-moz-transition: all .3s ease;-ms-transition: all .3s ease;-o-transition: all .3s ease;transition: all .3s ease;
 }
-.cmv_button__yes, .cmv_button__no{
-	width:170px;
-}
 .cmv_button__connect{
-	width:252px;
+	display:block;
+	margin:20px auto 0;
+	width:162px;
 }
-.cmv_button__notime{
-	width:188px;
-}
-.cmv_input__item{
+.cmv_input__item, .cmv_input__time_select{
 	display:inline-block;vertical-align:top;
-	/*width:223px!important;*/
-	height:52px!important;
-	padding:0 12px!important;
-	padding-left: 50px !important;
+	height:3em;
 	font-family:'Open Sans',sans-serif;
-	color:#000;font-size:16px;
+	font-weight:300;
+	color:#000;font-size:1.24em;
 	outline:0;
 	box-shadow:inset 0 3px 0 rgba(0,0,0,.06);
 	border:1px solid #dcd6d9;
 	-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;
 	-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
 }
+.cmv_input__item{
+	width:80%;max-width:350px;
+	padding:0 10px;
+}
+.cmv_buttons__with_time .cmv_input__item{
+	width:55%;max-width:350px;
+	padding:0 10px;
+}
+.cmv_input__time_select{
+	/*padding:0 8px;*/
+	/*margin-right:5px;*/
+}
 .cmv_input__item::-webkit-input-placeholder {color:#c0c0c0;}		
 .cmv_input__item::-moz-placeholder {color:#c0c0c0;}
 .cmv_input__item:focus::-webkit-input-placeholder {color:transparent;}
 .cmv_input__item:focus::-moz-placeholder {color:transparent;}
-	
-/* FOR ELEMS
+.cmv_final__text {
+	font-size: 1.4em;
+}
+.cmv_input__time,
+.cmv_input__time_box {
+	position:relative;
+	display:inline-block;
+}
+.cmv_input__time span {
+	display:inline-block;vertical-align:top;
+	font-size: 1.24em;line-height:2.9em;
+	margin-right:5px;
+}
 
-*/	
-.cmv_title{font-size:24px;width:650px;max-height:115px;overflow:hidden;}
-.cmv_title .cmv_lh30{max-height:90px;}
-.cmv_title__after{font-size:18px;}
-.cmv_final__text{font-size:18px;}
-.cmv_lh28{line-height: 28px;}
-.cmv_lh30{line-height: 30px;}
-.cmv_lh38{line-height: 38px;}
-.cmv_mt10{margin-top: 10px;}
-.cmv_mt17{margin-top: 17px;}
-.cmv_mt20{margin-top: 20px;}
-.cmv_mt23{margin-top: 23px;}
-.cmv_mt32{margin-top: 32px;}
-.cmv_mb5{margin-bottom: 5px;}
-.cmv_mb10{margin-bottom: 10px;}
-.cmv_mb26{margin-bottom: 26px;}
-.cmv_mb45{margin-bottom: 45px;}
-.cmv_tal{text-align:left;}
+/* TIMER 
 
-/* TIMER */
+*/
 .cmv__timer {
-	position:relative;top:5px;
-	font-size:36px;
-	line-height:35px;
-	margin-left:55px;
+	display:inline-block;
+	position: relative;
+	top: 5px;
+	font-size: 1.4em;
+	line-height: 1.1em;
+	margin-left: 26px;
 }
 .cmv__timer:before{
 	content:'';
-	position:absolute;top:7px;left:-40px;
+	position:absolute;top:-3px;left:-38px;
 	width:31px;height:35px;
-	background:url(../img/cmv_textmid__timer.png) no-repeat 0 0;
+	background:url(../img/cmv_textmid__timer_small.png) no-repeat 0 0;
 }
-.cmv__timer__big{
+
+
+
+
+/*
+
+.cmv_phone {
+    position:fixed;z-index: 200000!important;
+	right:70px;bottom:70px;
+    cursor: pointer; 
+	-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
+.cmv_phone__cir {
+	position:absolute;
+	top:50%;left:50%;
+	width:50px;height:50px;
+	border-radius:50%;
+	-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
+.cmv_phone__cir2 {
+	position: absolute;
+	top: 50%;left: 50%;
+	width: 41px;height: 40px;
+	border: 1px solid #fff;border-radius: 50%;
+	background: transparent;
+	margin: 5px 4px;
+	opacity: .5;
+	-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
+.cmv_phone__cir3 {
+	position:absolute;
+	top:50%;left:50%;
+	width:26px;height:26px;
+	margin: 13px 13px;
+	background:url(../img/cmv_mobile__phone.png) no-repeat 0 0;
+	-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;
+}
+
+*/
+
+/* ADRESS DEALERS BLOCK 
+
+*/
+.cmv_buttons__adress{
+	position:relative;
+	margin-bottom:15px;
+}
+.cmv_buttons__adress_label{
+	/*display:inline-block;*/
+	/*text-align:right;*/
+	/*vertical-align: middle;*/
+	/*width:47%;*/
+	/*margin-right:1%;*/
+}
+.cmv_buttons__adress select.cmv_buttons__adress_select{
+	/*top:0;*/
+	/*left:49% !important;*/
+	height:23px !important;
+	/*width:auto !important;*/
+	/*z-index:2;*/
+}
+.cmv_buttons__adress .customSelect {
+	width:40%;
+	display: inline-block;
+	width: 50%;
+	overflow: hidden;
+	vertical-align: middle;
+	text-align:left;
+}
+.cmv_buttons__adress .customSelectInner {
+	width:auto !important;
+	text-align:left;
+	white-space:nowrap;
+}
+
+/* GEO 
+
+*/
+.cmv_menubar{
+	position:absolute;
+	top:15px;
+	left:15px;
+	width:250px;
+}
+.cmv_geo{
+	position:relative;
+	margin-bottom:15px;
+}
+
+#cmv_geo:focus, #cmv_dealers:focus {
+  outline: none;
+}
+.cmv_geo__label{
 	display:inline-block;
-	margin:25px 0 30px 20px;
-	font-size:48px;
+	vertical-align: middle;
+	margin-right:1%;
 }
-.cmv__timer__big:before{
-	top:-11px;left:-58px;
-	width:46px;height:52px;
-	background:url(../img/cmv_textmid__timer_big.png) no-repeat 0 0;
+.cmv_menubar select.cmv_geo__select{
+	top:0;
+	left:98px !important;
+	height:23px !important;
+	width:auto !important;
+	z-index:2;
 }
-	
-/* TEXT
-*/
-.cmv_text14{font-size:14px;}
-.cmv_text16{font-size:16px;}
-.cmv_text18{font-size:18px;}
-.cmv_text18_600{font-size:18px;font-weight:600;}
-.cmv_text21{font-size:21px;}
-.cmv_text24{font-size:24px;}
-.cmv_text30{font-size:30px;}
+.cmv_menubar .customSelect {
+	width:40%;
+	display: inline-block;
+	width: 50%;
+	overflow: hidden;
+	vertical-align: middle;
+	text-align:left;
+}
+.cmv_menubar .customSelectInner {
+	width:auto !important;
+	text-align:left;
+	white-space:nowrap;
+}
 
-/* RATE
 
-*/
-.jRatingAverage {
-	position:relative;top:0;left:0;z-index:2;
-	height:100%;
-}
-.jRatingColor {
-	position:relative;top:0;left:0;z-index:2;
-	width:28px !important;height:100%;
-}
-.jStar {position:relative;left:0;z-index:3;}
+/************************************************\
+
+MOBILE TOUCH
+
+\************************************************/
+
 
 /* ANIM PHONE
 
@@ -331,17 +319,69 @@
 .cmv_phone:hover .cmv_phone__cir2{opacity:1;}
 .cmv_phone__mobile {background:url(../img/cmv_phone__mobile.png) no-repeat 50% 50%;}
 .cmv_phone__handset {background:url(../img/cmv_phone__handset.png) no-repeat 50% 50%;}
-@keyframes cmv_phone__cir4{0%{transform:rotate(0deg) scale(1) skew(1deg)}10%{transform:rotate(-25deg) scale(1
+@keyframes cmv_phone__cir4{0%{transform:rotate(0deg) scale(1) skew(1deg)}10%{transform:rotate(-25deg) scale(1) skew(1deg)}20%{transform:rotate(25deg) scale(1) skew(1deg)}30%{transform:rotate(-25deg) scale(1) skew(1deg)}40%{transform:rotate(25deg) scale(1) skew(1deg)}100%,50%{transform:rotate(0deg) scale(1) skew(1deg)}}@-moz-keyframes cmv_phone__cir4{0%{transform:rotate(0deg) scale(1) skew(1deg)}10%{-moz-transform:rotate(-25deg) scale(1) skew(1deg)}20%{-moz-transform:rotate(25deg) scale(1) skew(1deg)}30%{-moz-transform:rotate(-25deg) scale(1) skew(1deg)}40%{-moz-transform:rotate(25deg) scale(1) skew(1deg)}100%,50%{-moz-transform:rotate(0deg) scale(1) skew(1deg)}}@-webkit-keyframes cmv_phone__cir4{0%{-webkit-transform:rotate(0deg) scale(1) skew(1deg)}10%{-webkit-transform:rotate(-25deg) scale(1) skew(1deg)}20%{-webkit-transform:rotate(25deg) scale(1) skew(1deg)}30%{-webkit-transform:rotate(-25deg) scale(1) skew(1deg)}40%{-webkit-transform:rotate(25deg) scale(1) skew(1deg)}100%,50%{-webkit-transform:rotate(0deg) scale(1) skew(1deg)}}@-o-keyframes cmv_phone__cir4{0%{-o-transform:rotate(0deg) scale(1) skew(1deg)}10%{-o-transform:rotate(-25deg) scale(1) skew(1deg)}20%{-o-transform:rotate(25deg) scale(1) skew(1deg)}30%{-o-transform:rotate(-25deg) scale(1) skew(1deg)}40%{-o-transform:rotate(25deg) scale(1) skew(1deg)}100%,50%{-o-transform:rotate(0deg) scale(1) skew(1deg)}}
 
 
-
-/****** COUNTRY SELECT ************************************/
-
-.intl-tel-input .country-list {
-    text-align: left;
-    margin-top: 10px;
+.cmv_phone {
+    left: 50%;
+    margin-left: -78px;
+    bottom: 0;
 }
 
-.intl-tel-input .selected-flag {
-    width: 45px;
+.cmv_phone {
+     transition: all .3s ease-in-out;   
 }
+
+.cmvtouchhover {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+}
+
+
+/*****************************************\
+
+Regions Mobile
+
+\*****************************************/
+
+.cmv-phone-regions {    
+    background: white;    
+    transition: all .3s cubic-bezier(.05, 1.07, .1, 1.46);
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    margin-top: -120px;    
+   
+}
+
+.cmv-phone-regions a {
+    display: block;
+    color: #222;
+    text-decoration: none;
+    padding: 20px 0;
+    border-bottom: 1px solid #eee; 
+}
+
+.cmv-phone-regions li a:first-child {
+     padding-left: 20px; 
+}
+
+.overlayMobile {
+    position: fixed;   
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5);
+/*   transition: all .1s;*/
+    z-index: -1;  
+}
+
+.regionsTop {
+    margin-top: 0;
+}
+
+.cmvClose{
+   background-image: url(/img/close_thin.png);
+}
+
+
+
